core: Subindo serviço de categoria.
